--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,15 @@
 plugins {
 	id 'com.android.application'
 	id 'kotlin-android'
+	id 'kotlin-kapt'
+//	id 'com.google.gms.google-services'
+}
+
+def localProperties = new Properties()
+try {
+	localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+} catch (Exception e) {
+	logger.warn("No Local Properties File Found!", e)
 }
 
 android {
@@ -14,12 +23,45 @@ android {
 		versionName "1.0"
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+		// for IAP
+		if (!localProperties['base64EncodedPublicKey']) {
+			logger.warn('base64EncodedPublicKey must be set for signature verification. ' +
+					'You can add it to local.properties once you have gotten it from Play. ' +
+					'Example: base64EncodedPublicKey=[key value]')
+		}
+		buildConfigField("String", "BASE64_ENCODED_PUBLIC_KEY", "\"" + localProperties['base64EncodedPublicKey'] + "\"")
+	}
+
+	signingConfigs {
+		productionKey {
+			storeFile file('../../Keys')
+			storePassword "1234000"
+			keyAlias 'Key0'
+			keyPassword "1234000"
+		}
 	}
 
 	buildTypes {
+		debug {
+			signingConfig signingConfigs.productionKey
+		}
 		release {
-			minifyEnabled false
+			// Enables code shrinking, obfuscation, and optimization for only
+			// your project's release build type.
+			minifyEnabled true
+
+			// Enables resource shrinking, which is performed by the Android Gradle plugin.
+			shrinkResources true
+
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+			// If your project builds an Android App Bundle, you can automatically include the native debug symbols file in it.
+			// To include this file in release builds, add the following to your app's build.gradle file:
+			ndk.debugSymbolLevel 'SYMBOL_TABLE'
+
+			// this make app bundle not signed (?)
+			// debuggable true
 		}
 	}
 	compileOptions {
@@ -29,6 +71,9 @@ android {
 	kotlinOptions {
 		jvmTarget = '1.8'
 	}
+	buildFeatures {
+		viewBinding true
+	}
 }
 
 dependencies {
@@ -37,7 +82,45 @@ dependencies {
 	implementation 'androidx.appcompat:appcompat:1.4.0'
 	implementation 'com.google.android.material:material:1.4.0'
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
+	// Testing dependencies
 	testImplementation 'junit:junit:4.+'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+	// imported by XT
+	// XLib
+	implementation project(path: ':x-lib')
+
+	// Android
+	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//	implementation 'org.apache.commons:commons-lang3:3.12.0'
+//	implementation("androidx.recyclerview:recyclerview:1.2.1")
+	implementation 'androidx.preference:preference-ktx:1.1.1'
+	implementation 'com.google.code.gson:gson:2.8.9'
+//	implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
+	implementation 'androidx.webkit:webkit:1.4.0'
+	implementation("com.google.android.play:core:1.10.2")
+	implementation("com.google.android.play:core-ktx:1.8.1")
+
+	// Database
+	implementation "androidx.room:room-ktx:$room_version"
+	implementation "androidx.room:room-runtime:$room_version"
+	kapt "androidx.room:room-compiler:$room_version"
+
+	// to call async:
+//	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2-native-mt'
+	implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
+
+	// GG Play services
+	implementation "com.google.android.gms:play-services-games:$gms_game_play_version"
+	implementation "com.google.android.gms:play-services-auth:${gms_library_version}"
+
+	// Ads
+	implementation "com.google.android.gms:play-services-ads:$gms_ads_version"
+	// compileOnly aar in lib and implement aar in here
+	implementation files('../../library/unity-ads.aar')
+
+	// Google Play Billing Library
+	implementation "com.android.billingclient:billing-ktx:$billing_version"
 }
