--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,59 @@
 	package="x.game.bird">
 
 	<application
+		android:name=".MyApp"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.Bird">
+
+		<meta-data
+			android:name="com.google.android.gms.games.APP_ID"
+			android:value="@string/app_id" />
+		<meta-data
+			android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
+		<!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+		<!-- XT: ca-app-pub-xxx -->
+		<meta-data
+			android:name="com.google.android.gms.ads.APPLICATION_ID"
+			android:value="ca-app-pub-1972425075859992~1815260531" />
+
+		<provider
+			android:name="androidx.core.content.FileProvider"
+			android:authorities="@string/file_provider_authority"
+			android:exported="false"
+			android:grantUriPermissions="true">
+			<meta-data
+				android:name="android.support.FILE_PROVIDER_PATHS"
+				android:resource="@xml/file_paths" />
+		</provider>
+
 		<activity
-			android:name=".MainActivity"
-			android:exported="true">
+			android:name=".SplashScreenActivity"
+			android:exported="true"
+			android:screenOrientation="portrait">
+			<!-- android:theme="@style/SplashScreenTheme" -->
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+
+		<activity
+			android:name=".WelcomeActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:exported="true"
+			android:screenOrientation="portrait" />
+
+		<activity
+			android:name=".MainActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:exported="true"
+			android:screenOrientation="portrait" />
 	</application>
 
 </manifest>
