--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+	ext.kotlin_version = "1.6.10"
 	repositories {
 		google()
 		mavenCentral()
@@ -10,6 +11,19 @@ buildscript {
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
+
+		classpath 'com.google.gms:google-services:4.3.10'
+	}
+}
+
+allprojects {
+	ext {
+		lifecycleVersion = '2.4.0'
+		room_version = "2.4.0"
+		gms_library_version = '20.0.1'
+		gms_game_play_version = '22.0.1'
+		gms_ads_version = '20.5.0'
+		billing_version = "4.0.0"
 	}
 }
 
