--- a/app/src/main/assets/app-config.properties
+++ b/app/src/main/assets/app-config.properties
@@ -10,7 +10,7 @@ gAdUnitId.interstitial_TEST=ca-app-pub-3940256099942544/1033173712
 # XT: ca-app-pub-1972425075859992/5169316680
 gAdTestDevices=3274ED6D21440C53D135DFA92B207B3B
 # OPPO: 3274ED6D21440C53D135DFA92B207B3B
-unityGameID=
+unityGameID=4544895
 unityAdEnabled=true
 unityAdUnitID.banner=Banner_Android
 unityAdUnitID.interstitial=Interstitial_Android
