--- a/app/src/main/assets/app-config.properties
+++ b/app/src/main/assets/app-config.properties
@@ -1,7 +1,8 @@
-appID=10
+appID=7
 aboutURL=https://xthang.xyz/games/bird/about.html
 shareURL=https://bit.ly/x-bird
 trackingEnabled=true
+loggingExcludedDevices=a2244bb44949c871
 gAdUnitId.banner=ca-app-pub-1972425075859992/4249852181
 gAdUnitId.interstitial=ca-app-pub-1972425075859992/6301300456
 gAdUnitId.interstitial_TEST=ca-app-pub-3940256099942544/1033173712
