--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 plugins {
 	id 'com.android.application'
 	id 'kotlin-android'
+
+	// By XT
 	id 'kotlin-kapt'
+	// For Firebase, ...
 //	id 'com.google.gms.google-services'
 }
 
@@ -23,6 +26,9 @@ android {
 		versionName "1.0"
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+		// minSdk < 21 needs this
+		// multiDexEnabled true
 
 		// for IAP
 		if (!localProperties['base64EncodedPublicKey']) {
@@ -79,9 +85,9 @@ android {
 dependencies {
 
 	implementation 'androidx.core:core-ktx:1.7.0'
-	implementation 'androidx.appcompat:appcompat:1.4.0'
-	implementation 'com.google.android.material:material:1.4.0'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+	implementation 'androidx.appcompat:appcompat:1.4.1'
+	implementation 'com.google.android.material:material:1.5.0'
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
 	// Testing dependencies
 	testImplementation 'junit:junit:4.+'
@@ -96,11 +102,11 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 //	implementation 'org.apache.commons:commons-lang3:3.12.0'
 //	implementation("androidx.recyclerview:recyclerview:1.2.1")
-	implementation 'androidx.preference:preference-ktx:1.1.1'
+	implementation "androidx.preference:preference-ktx:$preference_version"
 	implementation 'com.google.code.gson:gson:2.8.9'
 //	implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 	implementation 'androidx.webkit:webkit:1.4.0'
-	implementation("com.google.android.play:core:1.10.2")
+	implementation("com.google.android.play:core:1.10.3")
 	implementation("com.google.android.play:core-ktx:1.8.1")
 
 	// Database
