--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 	ext.kotlin_version = "1.6.10"
-	repositories {
-		google()
-		mavenCentral()
-	}
-	dependencies {
-		classpath "com.android.tools.build:gradle:7.0.4"
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+}
 
-		// NOTE: Do not place your application dependencies here; they belong
-		// in the individual module build.gradle files
-
-		classpath 'com.google.gms:google-services:4.3.10'
-	}
+plugins {
+	id 'com.android.application' version '7.1.2' apply false
+	id 'com.android.library' version '7.1.2' apply false
+	id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 allprojects {
 	ext {
-		lifecycleVersion = '2.4.0'
-		room_version = "2.4.0"
-		gms_library_version = '20.0.1'
+		preference_version = '1.2.0'
+		lifecycleVersion = '2.4.1'
+		room_version = "2.4.2"
+		gms_library_version = '20.1.0'
 		gms_game_play_version = '22.0.1'
-		gms_ads_version = '20.5.0'
-		billing_version = "4.0.0"
+		gms_ads_version = '20.6.0'
+		billing_version = "4.1.0"
 	}
 }
 
