--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,8 +106,8 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.9'
 //	implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 	implementation 'androidx.webkit:webkit:1.4.0'
-	implementation("com.google.android.play:core:1.10.3")
-	implementation("com.google.android.play:core-ktx:1.8.1")
+	implementation("com.google.android.play:core:1.10.3") // App Review
+	implementation("com.google.android.play:core-ktx:1.8.1") // App Review
 
 	// Database
 	implementation "androidx.room:room-ktx:$room_version"
